# lc-pom

./: .gitignore  .gitigore  Contributors.md  Interpolate_director_field_from_snapshot.py  README.md  Radial-generate.py  ansatz-generate.py  crosspol-concise.py  mesh-to-grid.py  params.py  pom-image.py  pyproject.toml  setup.py
Images/: 2p5um-Radial-0-angle-0-FullRGB.npy  notes.txt
docs/: Makefile
docs/source/: api.rst  conf.py  index.rst  usage.rst
examples/: small_plot.mplstyle  tmp-filenames.txt
examples/Original_Director_Field/: Frame-1-DirectorField.txt  text.txt
lcpom/: README.md  __init__.py  __main__.py
lcpom/mesh/: mesh-to-grid.py
lcpom/orderfield/: lcsystems.py  mesh-to-grid.py
lcpom/pom/: pom-image.py  pomimage.py
lcpom/utils/: input.py  large_plot.mplstyle  params.py  plot_pom.py  read_vtk.py  tools.py  vector.py
scripts/: run_lcpom.py
src/: Read_vtk.py  pom-image.py
